@@ -32,11 +32,11 @@ public class InvestigationEntityBuilder {
   private String incidentCounty = "20";
   private Date incidentDate = DomainChef.uncookDateString("2017-08-20");
   private String locationType = "Home";
-  private Short communicationMethod = new Short("408");
+  private Short communicationMethod = Short.valueOf("408");
   private String name = "The test investigation";
   private String reportNarrative = "Summary of an investigation would appear here.";
   private String reference = "REF-TEST";
-  private Short responseTime = new Short("1518");
+  private Short responseTime = Short.valueOf("1518");
   private Date startedAt = DomainChef.uncookStrictTimestampString("2017-08-03T01:00:00.000-0000");
   private String additionalInformation = "Additional information about the investigation.";
   private Boolean sensitive = Boolean.FALSE;
